--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <img src="" alt="zzz" />
       </div>
     </nav>
-    <main></main>
+    <main>
+        <img src="" alt="zee">
+    </main>
   </body>
 </html>
