--- a/index.html
+++ b/index.html
@@ -9,12 +9,33 @@
   </head>
   <body>
     <nav>
-      <div class="icon">
-        <img src="" alt="zzz" />
+      <div class="icon-ground">
+        <div class="icon-item">
+          <img
+            class="main-icon"
+            src="https://images.unsplash.com/photo-1594270410221-e6a33cbc6fb9?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+            alt="bg"
+          />
+          <img
+            class="circle-imge"
+            src="https://images.unsplash.com/photo-1596815074853-84c4949c5b58?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=619&q=80"
+            alt="cc"
+          />
+        </div>
+        <div class="icon-item">
+          <img
+            class="main-icon"
+            src="https://images.unsplash.com/photo-1583843364289-0d1b2978874c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+            alt="bg"
+          />
+          <img
+            class="circle-imge"
+            src="https://images.unsplash.com/photo-1615332327357-ce22631750a6?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+            alt=""
+          />
+        </div>
       </div>
     </nav>
-    <main>
-        <img src="" alt="zee">
-    </main>
+    <main></main>
   </body>
 </html>
