--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
             alt=""
           />
         </div>
+        <div class="icon-item">
+          <img
+            class="main-icon"
+            src="https://images.unsplash.com/photo-1583843364289-0d1b2978874c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+            alt="bg"
+          />
+          <img
+            class="circle-imge"
+            src="https://images.unsplash.com/photo-1615332327357-ce22631750a6?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+            alt=""
+          />
+        </div>
       </div>
     </nav>
     <main></main>
