--- a/index.html
+++ b/index.html
@@ -111,6 +111,22 @@
             <div class="view"></div>
           </div>
         </div>
+        <div class="video-card">
+          <div class="video">video</div>
+          <div class="video-titel"></div>
+          <div class="box-view-time">
+            <div class="time"></div>
+            <div class="view"></div>
+          </div>
+        </div>
+        <div class="video-card">
+          <div class="video">video</div>
+          <div class="video-titel"></div>
+          <div class="box-view-time">
+            <div class="time"></div>
+            <div class="view"></div>
+          </div>
+        </div>
         
       </div>
     </main>
